tests/src/frontend/typechecking/invalid/tunder_function_1.sk
fun f(): Int {
  42
}

fun test(): () ~> _ {
  f
}

fun main(): void {
  print_string("Pass")
}
